<resources>
    <string name="app_name">MyIntentApp</string>
    <string name="move_activity">pindah activity</string>
    <string name="move_with_data">pindah activity dengan data</string>
    <string name="dial_number">buka telepon</string>
    <string name="received">data diterima</string>
    <string name="this_is_move_activity">ini move activity</string>
    <string name="pojo">pindah dengan pojo</string>
    <string name="choose_number">Choose Number</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_150">150</string>
    <string name="_200">200</string>
    <string name="choose">choose</string>
    <string name="return_result">membawa balik data</string>
</resources>